Fix overflow of zoomed in plots not shown

--- a/webview/src/plots/components/styles.module.scss
+++ b/webview/src/plots/components/styles.module.scss
@@ -42,6 +42,10 @@ $gap: 20px;
   display: flex !important;
   align-items: center;
   justify-content: center;
+
+  svg {
+    overflow: visible;
+  }
 }
 
 .singleViewPlotsGrid,
